# PlantCare_Module

./: .cproject  .project  CMakeLists.txt  README.md  platformio.ini  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  PlantCare_Module.c
main/services/NvsService/: NVS_Service.c  NVS_Service.h
main/services/SensorService/: Sensor_Service.c  Sensor_Service.h
main/services/WifiService/: WIFI_Service.c  WIFI_Service.h
main/services/bluetoothService/: Bluetooth_Service.c  Bluetooth_Service.h
src/: main.cpp
src/headers/: LCDService.h  ModuleService.h  MoistureSensorService.h
src/services/: LCDService.cpp  ModuleService.cpp  MoistureSensorService.cpp  WiFiService.cpp
